force-app/main/default/objects/Special_Access_Info__c/Special_Access_Info__c.object-meta.xml
<CustomObject>
    <label>Special Access Info</label>
    <nameField>
        <label>Special Access Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Access Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>