force-app/main/default/objects/Special_Access_Info__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <label>ABC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>