force-app/main/default/objects/Special_Access_Info__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>