force-app/main/default/objects/Special_Access_Info__c/fields/AID1__c.field-meta.xml
<CustomField>
    <fullName>AID1__c</fullName>
    <label>AID1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>