force-app/main/default/objects/Special_Access_Info__c/fields/AID2__c.field-meta.xml
<CustomField>
    <fullName>AID2__c</fullName>
    <label>AID2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>