force-app/main/default/objects/Special_Access_Info__c/fields/AT_T_CR_No__c.field-meta.xml
<CustomField>
    <fullName>AT_T_CR_No__c</fullName>
    <label>AT&amp;T CR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>