force-app/main/default/objects/Special_Access_Info__c/fields/ATN__c.field-meta.xml
<CustomField>
    <fullName>ATN__c</fullName>
    <label>ATN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>