force-app/main/default/objects/Special_Access_Info__c/fields/BEST__c.field-meta.xml
<CustomField>
    <fullName>BEST__c</fullName>
    <label>BEST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>