force-app/main/default/objects/Special_Access_Info__c/fields/CIR_Number__c.field-meta.xml
<CustomField>
    <fullName>CIR_Number__c</fullName>
    <label>CIR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>