force-app/main/default/objects/Special_Access_Info__c/fields/CRDD__c.field-meta.xml
<CustomField>
    <fullName>CRDD__c</fullName>
    <label>CRDD</label>
    <type>Date</type>
</CustomField>