force-app/main/default/objects/Special_Access_Info__c/fields/CRO__c.field-meta.xml
<CustomField>
    <fullName>CRO__c</fullName>
    <label>CRO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>