force-app/main/default/objects/Special_Access_Info__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>25</length>
    <type>Text</type>
</CustomField>