force-app/main/default/objects/Special_Access_Info__c/fields/DIGT__c.field-meta.xml
<CustomField>
    <fullName>DIGT__c</fullName>
    <label>DIGT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>