force-app/main/default/objects/Special_Access_Info__c/fields/FDR__c.field-meta.xml
<CustomField>
    <fullName>FDR__c</fullName>
    <label>FDR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>