force-app/main/default/objects/Special_Access_Info__c/fields/FRQ__c.field-meta.xml
<CustomField>
    <fullName>FRQ__c</fullName>
    <label>FRQ</label>
    <length>25</length>
    <type>Text</type>
</CustomField>