force-app/main/default/objects/Special_Access_Info__c/fields/HCUT__c.field-meta.xml
<CustomField>
    <fullName>HCUT__c</fullName>
    <label>HCUT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>