force-app/main/default/objects/Special_Access_Info__c/fields/HI_CAP__c.field-meta.xml
<CustomField>
    <fullName>HI_CAP__c</fullName>
    <label>HI CAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>