force-app/main/default/objects/Special_Access_Info__c/fields/Library_id__c.field-meta.xml
<CustomField>
    <fullName>Library_id__c</fullName>
    <label>Library id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>