force-app/main/default/objects/Special_Access_Info__c/fields/NC_Code__c.field-meta.xml
<CustomField>
    <fullName>NC_Code__c</fullName>
    <label>NC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>