force-app/main/default/objects/Special_Access_Info__c/fields/NCI__c.field-meta.xml
<CustomField>
    <fullName>NCI__c</fullName>
    <label>NCI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>