force-app/main/default/objects/Special_Access_Info__c/fields/OA01__c.field-meta.xml
<CustomField>
    <fullName>OA01__c</fullName>
    <label>OA01</label>
    <length>25</length>
    <type>Text</type>
</CustomField>