force-app/main/default/objects/Special_Access_Info__c/fields/OCC_CIR_No__c.field-meta.xml
<CustomField>
    <fullName>OCC_CIR_No__c</fullName>
    <label>OCC CIR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>