force-app/main/default/objects/Special_Access_Info__c/fields/OLOC__c.field-meta.xml
<CustomField>
    <fullName>OLOC__c</fullName>
    <label>OLOC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>