force-app/main/default/objects/Special_Access_Info__c/fields/PIU__c.field-meta.xml
<CustomField>
    <fullName>PIU__c</fullName>
    <label>PIU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>