force-app/main/default/objects/Special_Access_Info__c/fields/PON__c.field-meta.xml
<CustomField>
    <fullName>PON__c</fullName>
    <label>PON</label>
    <length>25</length>
    <type>Text</type>
</CustomField>