force-app/main/default/objects/Special_Access_Info__c/fields/PRD__c.field-meta.xml
<CustomField>
    <fullName>PRD__c</fullName>
    <label>PRD</label>
    <type>Date</type>
</CustomField>