force-app/main/default/objects/Special_Access_Info__c/fields/PTD__c.field-meta.xml
<CustomField>
    <fullName>PTD__c</fullName>
    <label>PTD</label>
    <type>Date</type>
</CustomField>