force-app/main/default/objects/Special_Access_Info__c/fields/QC_Stage__c.field-meta.xml
<CustomField>
    <fullName>QC_Stage__c</fullName>
    <label>QC Stage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>