force-app/main/default/objects/Special_Access_Info__c/fields/RCDT__c.field-meta.xml
<CustomField>
    <fullName>RCDT__c</fullName>
    <label>RCDT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>