force-app/main/default/objects/Special_Access_Info__c/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <label>RO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>