force-app/main/default/objects/Special_Access_Info__c/fields/SECNCI__c.field-meta.xml
<CustomField>
    <fullName>SECNCI__c</fullName>
    <label>SECNCI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>