force-app/main/default/objects/Special_Access_Info__c/fields/TA01__c.field-meta.xml
<CustomField>
    <fullName>TA01__c</fullName>
    <label>TA01</label>
    <length>25</length>
    <type>Text</type>
</CustomField>