force-app/main/default/objects/Special_Access_Info__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <label>Tariff</label>
    <length>25</length>
    <type>Text</type>
</CustomField>