force-app/main/default/objects/Special_Access_Info__c/fields/TG__c.field-meta.xml
<CustomField>
    <fullName>TG__c</fullName>
    <label>TG</label>
    <length>25</length>
    <type>Text</type>
</CustomField>