force-app/main/default/objects/Special_Access_Info__c/fields/TLOC__c.field-meta.xml
<CustomField>
    <fullName>TLOC__c</fullName>
    <label>TLOC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>