force-app/main/default/objects/Special_Access_Info__c/fields/TSP__c.field-meta.xml
<CustomField>
    <fullName>TSP__c</fullName>
    <label>TSP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>