force-app/main/default/objects/Special_Access_Info__c/fields/Type_SVC__c.field-meta.xml
<CustomField>
    <fullName>Type_SVC__c</fullName>
    <label>Type SVC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>