force-app/main/default/objects/Special_Access_Info__c/fields/UNE__c.field-meta.xml
<CustomField>
    <fullName>UNE__c</fullName>
    <label>UNE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>