force-app/main/default/objects/Special_Access_Info__c/fields/USO_Number__c.field-meta.xml
<CustomField>
    <fullName>USO_Number__c</fullName>
    <label>USO Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>